--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
         <section class="section-btn-nav-header">
                 <button class="btn-nav-header nav-watering"><a href="link/wateringindex.html" alt="En savoir plus sur mes arrosages" title="En savoir plus sur mes arrosages" >Arrosages </a></button>
                 <button class="btn-nav-header nav-cutting"><a href="link/cuttingindex.html" alt="En savoir plus sur mes bouturages" title="En savoir plus sur mes bouturages" >Bouturages</a></button>
-                <button class="btn-nav-header nav-vermin"><a href="link/verminindex.html" alt="En savoir plus sur mes observations de parasites" title="En savoir plus sur mes observations de parasites" >Parasites </a></button>
-                <button class="btn-nav-header nav-repotting"><a href="link/repottingindex.html" alt="En savoir plus sur mes rempotages" title="En savoir plus sur mes rempotages" >Rempotages</a></button>
+                <button class="btn-nav-header nav-vermin"><a href="link/verminindex.html" alt="En savoir plus sur mes observations de parasites" title="En savoir plus sur mes observations de parasites">Parasites </a></button>
+                <button class="btn-nav-header nav-repotting"><a href="link/repottingindex.html" alt="En savoir plus sur mes rempotages" title="En savoir plus sur mes rempotages">Rempotages</a></button>
+                <button class="btn-nav-header nav-install-tillandsia"><a href="link/installtillandsia.html" alt="Comment j'accroche mes Tillandsia" title="Comment j'accroche mes Tillandsia" >Accrochage Tillandsia</a></button>
         </section>
 </footer>
 
@@ -404,6 +405,7 @@
         <button class="btn-nav-footer nav-cutting"><a href="link/cuttingindex.html" alt="En savoir plus sur mes bouturages" title="En savoir plus sur mes bouturages" >Bouturages</a></button>
         <button class="btn-nav-footer nav-vermin"><a href="link/verminindex.html" alt="En savoir plus sur mes observations de parasites" title="En savoir plus sur mes observations de parasites" >Parasites </a></button>
         <button class="btn-nav-footer nav-repotting"><a href="link/repottingindex.html" alt="En savoir plus sur mes rempotages" title="En savoir plus sur mes rempotages" >Rempotages</a></button>
+        <button class="btn-nav-header nav-install-tillandsia"><a href="link/installtillandsia.html" alt="Comment j'accroche mes Tillandsia" title="Comment j'accroche mes Tillandsia" >Accrochage Tillandsia</a></button>
     </div>
 
     <div class="btn-top">
