--- a/link/tillandsiaindex.html
+++ b/link/tillandsiaindex.html
@@ -32,7 +32,7 @@
                 <a href="#tillandsia5">Arrosage en hiver</a>
                 <a href="#tillandsia6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="tillandsia1"><span class="species">Tillandsia<a href="tillandsiagallery.html#tillandsia">Voir la galerie photo</a></span>
+            <div class="index-category-tab-content" id="tillandsia1"><span class="species">Tillandsia<a href="tillandsiagallery.html#tillandsia" title="Galerie photo Tillandsia">Voir la galerie photo</a></span>
                     <img src="../assets/img/tillandsia/index/tillandsia1.jpg" alt="Tillandsia" title="Tillandsia"/>
                     <img src="../assets/img/tillandsia/index/tillandsia2.jpg" alt="Tillandsia" title="Tillandsia"/>
                     <img src="../assets/img/tillandsia/index/tillandsia3.jpg" alt="Tillandsia" title="Tillandsia"/>
@@ -47,7 +47,8 @@
             </div>
             <div class="index-category-tab-content" id="tillandsia5" hidden="hidden">Je les arrose un peu moins souvent toujours par vaporisation. <br/>Ils se trouvent dans un environnement ou l'air est humide.
             </div>
-            <div class="index-category-tab-content" id="tillandsia6" hidden="hidden">Aucun substrat car cette plante est épiphyte. <br/>Je la fais tenir contre une écorce avec un lien durant parfois plusieurs mois le temps que les racines aient assez poussé et puissent tenir la plante sans lien.
+            <div class="index-category-tab-content" id="tillandsia6" hidden="hidden">Aucun substrat car cette plante est épiphyte.<br/>
+                <a class="install-tillandsia-info" href="../link/installtillandsia.html" title="Accrochage Tillandsia">Voir comment j'accroche mes Tillandsia</a>
             </div>
         </section>
         <hr>		
@@ -60,7 +61,7 @@
                 <a href="#ionantha5">Arrosage en hiver</a>
                 <a href="#ionantha6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="ionantha1"><span class="species">Tillandsia ionantha<a href="tillandsiagallery.html#ionantha">Voir la galerie photo</a></span>
+            <div class="index-category-tab-content" id="ionantha1"><span class="species">Tillandsia ionantha<a href="tillandsiagallery.html#ionantha" title="Galerie photo Tillandsia">Voir la galerie photo</a></span>
                 <img src="../assets/img/tillandsia/index/ionantha.jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
             </div>   
             <div class="index-category-tab-content" id="ionantha2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la tempéreture doit passer sous les 15°C. <br/>Elle prend une belle teinte rouge avant et pendant la floraison.
@@ -71,7 +72,8 @@
             </div>
             <div class="index-category-tab-content" id="ionantha5" hidden="hidden">Je les arrose un peu moins souvent toujours par vaporisation. <br/>Ils se trouvent dans un environnement ou l'air est humide.
             </div>
-            <div class="index-category-tab-content" id="ionantha6" hidden="hidden">Aucun substrat car cette plante est épiphyte. <br/>Je la fais tenir contre une écorce avec un lien durant parfois plusieurs mois le temps que les racines aient assez poussé et puissent tenir la plante sans lien.
+            <div class="index-category-tab-content" id="ionantha6" hidden="hidden">Aucun substrat car cette plante est épiphyte.<br/>
+                <span class="install-tillandsia-info"><a href="../link/installtillandsia.html" title="Accrochage Tillandsia">Voir comment j'accroche mes Tillandsia</a></span>  
             </div>
         </section>
         <hr>
