--- a/modal.html
+++ b/modal.html
@@ -109,7 +109,17 @@
                                             _Ajout de liens entre les fiches infos et galeries photos par espèce de plante pour faciliter la navigation.
                                         </div>
                                 </div>
-                                </li>                                              
+                                </li>
+                                <li>
+                                    <div class="modal-date-flex">
+                                            21/06/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            _Ajout d'une page expliquant comment j'accroche mes Tillandsia.
+                                        </div>
+                                </div>
+                                </li>                                                      
                             </ul>               
                         </div>      
         </div>                
