--- a/link/installtillandsia.html
+++ b/link/installtillandsia.html
@@ -28,7 +28,7 @@
         </div>
         <div class="tillandsia-install-expl">
             <p>
-                Visseuse avec différentes mèches à bois pour percer des trous de différentes aux endroits ou je déciderai de placer chaque plante.
+                Visseuse avec différentes mèches à bois pour percer des trous de différentes tailles aux endroits ou je déciderai de placer chaque plante.
             </p>
         </div>
     </section>
