--- a/link/installtillandsia.html
+++ b/link/installtillandsia.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/installtillandsia.css">
+    <script type="text/javascript" src="../assets/js/protection.js"></script>
     <title>Document</title>
 </head>
-<body>
+<body onload="prot()">
     <header>                                                                    <!-- TITLE, SUB-TITLE ET BOUTONS DE NAVIGATION -->
         <section class="tillandsia-install-desc">
             <div><h1 class="title-tillandsia-install-desc" id="top">Tillandsia installation</h1>
