--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                         <li><a href="link/fernsindex.html#emeiensis">Coniogramme emeiensis</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Gymnocalicium</a>
+                <li><a href="#">Gymnocalycium</a>
                     <ul>
                         <li><a href="link/gymnocaliciumindex.html">Accueil</a></li>
-                        <li><a href="link/gymnocaliciumindex.html#andreae">Gymnocalicium andreae</a></li>
-                        <li><a href="link/gymnocaliciumindex.html#baldianum">Gymnocalicium baldianum</a></li>
-                        <li><a href="link/gymnocaliciumindex.html#mihanovicii">Gymnocalicium mihanovicii</a></li>
-                        <li><a href="link/gymnocaliciumindex.html#pflanzii">Gymnocalicium pflanzii</a></li>
-                        <li><a href="link/gymnocaliciumindex.html#quehlianum">Gymnocalicium quehlianum</a></li>
+                        <li><a href="link/gymnocaliciumindex.html#andreae">Gymnocalycium andreae</a></li>
+                        <li><a href="link/gymnocaliciumindex.html#baldianum">Gymnocalycium baldianum</a></li>
+                        <li><a href="link/gymnocaliciumindex.html#mihanovicii">Gymnocalycium mihanovicii</a></li>
+                        <li><a href="link/gymnocaliciumindex.html#pflanzii">Gymnocalycium pflanzii</a></li>
+                        <li><a href="link/gymnocaliciumindex.html#quehlianum">Gymnocalycium quehlianum</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Kalanchoe</a>
