--- a/link/gymnocaliciumindex.html
+++ b/link/gymnocaliciumindex.html
@@ -10,12 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
-        <title>Mes Gymnocalicium</title>
+        <title>Mes Gymnocalycium</title>
     </head>
     <body onload="prot()" id="gymnocalicium-background">
         <header>                                                                <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
             <div>
-                <h1 class="title-index-category" class= "top">MES GYMNOCALICIUM</h1>
+                <h1 class="title-index-category" class= "top">MES GYMNOCALYCIUM</h1>
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
                     <a href="#andreae"> andreae,</a> 
@@ -147,7 +147,7 @@
         </section>
         <hr>
         <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
-            <button class="styled-btn-gallery"><a href="gymnocaliciumgallery.html">Galerie photos de mes Gymnocalicium</a></button>
+            <button class="styled-btn-gallery"><a href="gymnocaliciumgallery.html">Galerie photos de mes Gymnocalycium</a></button>
             <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
             <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
         </nav>
