--- a/link/installtillandsia.html
+++ b/link/installtillandsia.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/installtillandsia.css">
     <script type="text/javascript" src="../assets/js/protection.js"></script>
-    <title>Document</title>
+    <title>Installation Tillandsia</title>
 </head>
-<body onload="prot()">
+<body onload="prot()" id="install-tillandsia-background">
     <header>                                                                    <!-- TITLE, SUB-TITLE ET BOUTONS DE NAVIGATION -->
         <section class="tillandsia-install-desc">
             <div><h1 class="title-tillandsia-install-desc" id="top">Tillandsia installation</h1>
