--- a/link/orchidsindex.html
+++ b/link/orchidsindex.html
@@ -58,7 +58,7 @@
             <a href="#maudiae5">Arrosage en hiver</a>
             <a href="#maudiae6">Rempotage</a>
         </nav-tabs>   
-        <div class="index-category-tab-content" id="maudiae1"><span class="species">Paphiopedilum maudiae<a href="orchidsindex.html#maudiae">Voir la galerie photo</a></span>
+        <div class="index-category-tab-content" id="maudiae1"><span class="species">Paphiopedilum maudiae<a href="orchidsgallery.html#maudiae">Voir la galerie photo</a></span>
 				      <img src="../assets/img/orchids/index/maudiae.jpg" alt="paphiopedilum maudiae" title="paphiopedilum maudiae"/>
         </div>   
         <div class="index-category-tab-content" id="maudiae2" hidden="hidden">Je la place dans un endroit lumineux en évitant qu'elle ne reçoive de soleil . <br/> Si dehors, je la rentre lorsque les nuits ont une température qui passe sous les 15°C.
