--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -194,6 +194,7 @@
             <div class="index-category-tab-content" id="stainesii5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois. <br/> Sauf si je vois qu'il commence à se fripper.
             </div>
             <div class="index-category-tab-content" id="stainesii6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite pas trop grand.
+                <a class="species-repotting-info" href="repottingferocactusstainesii.html" alt="Rempotage Ferocactus stainesii" title="Rempotage Ferocactus stainesii">Voir comment je rempote mon Ferocactus stainesii</a>
             </div>
         </section>
         <hr>
@@ -266,7 +267,8 @@
             </div>
             <div class="index-category-tab-content" id="coryne5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois.
             </div>
-            <div class="index-category-tab-content" id="coryne6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut avec de l'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite pas trop grand.
+            <div class="index-category-tab-content" id="coryne6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut avec de l'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite pas trop. <br>
+                <a class="species-repotting-info" href="repottingstetsoniacoryne.html" alt="Rempotage Stetsonia coryne" title="Rempotage Stetsonia coryne">Voir comment je rempote mes Stetsonia</a>
             </div>
         </section>
         <hr>   
