--- a/modal.html
+++ b/modal.html
@@ -119,7 +119,18 @@
                                             _Ajout d'une page expliquant comment j'accroche mes Tillandsia.
                                         </div>
                                 </div>
-                                </li>                                                      
+                                </li>      
+                                <li>
+                                    <div class="modal-date-flex">
+                                            23/06/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            _Ajout d'une page expliquant comment je rempote mes Stetsonia coryne.
+                                            _Ajout d'une page expliquant comment je rempote mon Ferocactus stainesii.
+                                        </div>
+                                </div>
+                                </li>                                                    
                             </ul>               
                         </div>      
         </div>                
