--- a/link/gymnocaliciumgallery.html
+++ b/link/gymnocaliciumgallery.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
-        <title>Galerie photo de mes Gymnocalicium</title>
+        <title>Galerie photo de mes Gymnocalycium</title>
     </head>
 <body onload="prot()" id="gymnocalicium-background">
 <main>
     <header>                                                                    <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
             <div>
-                <h1 class="title-gallery-category" id="top"> Galerie photo de mes Gymnocalicium</h1>
+                <h1 class="title-gallery-category" id="top"> Galerie photo de mes Gymnocalycium</h1>
             </div>
                 <h2 class="sub-title-gallery-category">Végétaux présents ici:
                     <a href="#andreae"> andreae,</a> 
@@ -84,7 +84,7 @@
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
     <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-    <button class="styled-btn-index"><a href="gymnocaliciumindex.html">Page des Gymnocalicium</a></button>
+    <button class="styled-btn-index"><a href="gymnocaliciumindex.html">Page des Gymnocalycium</a></button>
 </nav>
 </body>
 </html>
